--- a/index.css
+++ b/index.css
@@ -526,6 +526,7 @@ flex-direction: row;
 .footer{
     display: grid;
     margin-top: 40px;
+    max-height: 200px;
 }
 .footer h1{
     text-align: center;
@@ -1072,7 +1073,7 @@ font-weight: lighter;
             }
             .footers{
                 width: 100%;
-                height: 500px;
+                height: 100px;
                 background: linear-gradient(to right,rgba(23, 24, 61, 0.904),rgba(154, 154, 241, 0.788));
             }
             .footers .glass{
