--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,285 @@
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
+  overflow: hidden;
+}
 
+@keyframes spin {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.nav {
+  width: 100%;
+  height: 70px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  padding-left: 100px;
+  padding-right: 100px;
+  display: flex;
+  align-items: center;
+}
+.Logo {
+  width: 50px;
+  height: 50px;
+  background-color: #181818;
+  border-radius: 50%;
+  box-shadow: -5px 0px 5px rgba(255, 255, 255, 0.2),
+    5px 0px 5px rgba(255, 255, 255, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Logo span {
+  color: white;
+  font-size: 20px;
+}
+.nav .links {
+  margin-left: auto;
+  color: white;
+}
+.nav .links ul li {
+  display: inline;
+  margin-left: 30px;
+  font-weight: bold;
+  font-size: 14px;
+}
+.light {
+  position: absolute;
+  width: 700px;
+  height: 700px;
+  /* background-color: rgba(255, 255, 255, 0.02); */
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  transform: rotate(0deg);
+  /* transition: all 0.3s; */
+  border-radius: 50%;
+  animation-name: spin;
+  animation-duration: 8000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  box-shadow: -50px 5px 5px rgba(48, 50, 175, 0.05);
+}
+
+.main-detail {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 100px;
+  background-color: transparent;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.main-detail .write-up {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.main-detail .write-up h1 {
+  color: rgb(41, 185, 231);
+  font-size: 50px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+}
+.fr {
+  color: rgb(41, 185, 231);
+  font-weight: bolder;
+}
+.main-detail .write-up p {
+  color: white;
+  font-size: 18px;
+  text-align: justify;
+  font-weight: bold;
+}
+.my-image {
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+}
+.my-image img {
+  margin-left: auto;
+}
+.img-light {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1)
+  );
+  border: none;
+  border-radius: 50%;
+  transform: translateX(100px) translateY(50px);
+}
+.btn {
+  width: 250px;
+  height: 40px;
+  border-radius: 20px;
+  background: linear-gradient(
+    to right,
+    rgb(41, 185, 231),
+    rgb(41, 185, 231),
+    rgba(41, 185, 231, 0.3),
+    rgba(41, 185, 231, 0.3)
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn span {
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+}
+.skl {
+  width: 100%;
+  height: 100px;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+.skl svg {
+  color: white;
+  font-size: 100px;
+}
+.phone_link{
+  margin-left: auto;
+  min-width: 40px;
+  min-height: 20px;
+  background-color:transparent;
+  position: relative;
+  transition: all 0.5s;
+  display: none;
+}
+.phone_link .bar{
+position: absolute;
+width: 30px;
+height: 2px;
+background-color: white;
+border-radius: 10px;
+right: 0;
+transition: all 0.5s;
+}
+.phone_link .bar2{
+margin-top: 10px;
+}
+
+.phone_link.active .bar2{
+  transform: rotate(-45deg);
+}
+.phone_link.active .bar1{
+  transform: rotate(45deg) translateY(5px) translateX(7px);
+}
+.bottom_link{
+  position: absolute;
+  height: 50vh;
+  width: 100%;
+  background: rgba(11, 11, 11, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(11, 11, 11, 0.3);
+  bottom: 0;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  transform: translateY(80vh);
+  transition: all 0.5s;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+.bottom_link.active{
+  transform: translateY(0vh);
+}
+.menu{
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.menu span{
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+}
+.menu svg{
+  font-size: 50px;
+  color:black;
+}
+
+
+
+
+
+
+
+@media (max-width: 600px) {
+.nav{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.nav .links{
+  display: none;
+}
+.main-detail{
+  width: 90%;
+  grid-template-columns: 1fr;
+}
+.main-detail .write-up h1{
+  font-size: 30px;
+  text-align: left;
+}
+.my-image {
+  display: none;
+  align-items: flex-start;
+  position: relative;
+  flex-direction: column;
+}
+.skl {
+  width: 100%;
+  height: 100px;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+.skl svg {
+  color: white;
+  font-size: 60px;
+}
+.main-detail .write-up p {
+  color: white;
+  font-size: 15px;
+  text-align: justify;
+  font-weight: bold;
+}
+.phone_link{
+  display: block;
+}
+/* .my-image img {
+  margin-left: auto;
+} */
 }
