--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@ body {
   font-family: "Poppins", sans-serif;
   overflow: hidden;
 }
-
+a{
+  text-decoration: none;
+  color:white;
+}
+li{
+  cursor: pointer;
+}
 @keyframes spin {
   0% {
     transform: scale(1);
@@ -228,7 +234,78 @@ border: 1px solid rgba(11, 11, 11, 0.3);
   font-size: 50px;
   color:black;
 }
+.projects{
+  width: 95%;
+  height: 80vh;
+  background-color:transparent;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  margin-top: 20px;
+  overflow-y: scroll;
+  z-index: 100;
+  margin-bottom: 10px;
+}
+.projects .my_project{
+  width: 100%;
+  height: 330px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: #f9f9f9;
+}
+.my_project img{
+  width: 80%;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  border-radius: 10px;
 
+}
+.my_project .project_desc{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+}
+.project_desc .title{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.project_desc span{
+  color: black;
+  font-weight: bold;
+}
+.project_desc .main_desc{
+  text-align: justify;
+  width: 100%;
+  color: black;
+}
+.my_project .divide{
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+.project_link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+}
+.project_link .prl{
+  color: black;
+  font-weight: bolder;
+  margin-right: 20px;
+}
+.project_link a{
+  color: black;
+  margin-left: 10px;
+}
 
 
 
@@ -279,7 +356,35 @@ border: 1px solid rgba(11, 11, 11, 0.3);
 .phone_link{
   display: block;
 }
-/* .my-image img {
+.projects{
+  height: 90vh;
+  grid-template-columns: 1fr;
+  width: 95%;
+}
+
+.projects .my_project{
+  width: 100%;
+  height: 380px;
+  border-radius: 10px;
+  
+}
+.my_project img{
+  width: 80%;
+ 
+  margin-top:5px;
+  
+
+}
+.my_project .project_desc{
+  width: 80%;
   margin-left: auto;
-} */
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+}
+.project_desc .title{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+}
 }
