--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ li{
   padding-right: 100px;
   display: flex;
   align-items: center;
+  
 }
 .Logo {
   width: 50px;
@@ -209,6 +210,7 @@ border: 1px solid rgba(11, 11, 11, 0.3);
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  z-index: 200;
 }
 .bottom_link.active{
   transform: translateY(0vh);
@@ -245,8 +247,9 @@ border: 1px solid rgba(11, 11, 11, 0.3);
   gap: 10px;
   margin-top: 20px;
   overflow-y: scroll;
-  z-index: 100;
+  z-index:50;
   margin-bottom: 10px;
+  position: relative;
 }
 .projects .my_project{
   width: 100%;
